deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filegator-svc
  namespace: filegator
spec:
  selector:
    app: filegator
  ports:
  - name: filegator
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
